# snap-tools-imgui

./: .clang-format  .gitignore  CMakeLists.txt  imgui.ini  main.cpp
include/: Application.h  UIManager.h
include/platform/: IPlatform.h  LinuxPlatform.h  MacOSPlatform.h  WindowsPlatform.h
src/: Application.cpp  UIManager.cpp  main.cpp
src/platform/: PlatformFactory.cpp
src/platform/linux/: LinuxPlatform.cpp
src/platform/macos/: MacOSPlatform.mm
src/platform/windows/: WindowsPlatform.cpp
